--- a/madness.css
+++ b/madness.css
@@ -14,12 +14,13 @@
 
 body {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: min(100%,60ch);
   gap: 1em;
   margin: 0 1em;
-  padding-top: 1em;
+  padding-block: 1em;
   min-height: 100lvh;
   background-color: var(--monkey-background);
+  justify-content: center;
 
   font-family: "Montserrat", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
@@ -29,18 +30,13 @@ body {
     background-image: url(/bg.png);
   }
 
-  @media screen and (min-width: 80ch) {
-    grid-template-columns: minmax(20ch, 333px) 2fr;
-    grid-template-rows: 1fr min-content;
+  @media screen and (min-width: 1500px) {
+    grid-template-columns: minmax(20ch, 333px) 50ch 1fr;
 
     footer {
       grid-column-start: 1;
-      grid-column-end: 3;
+      grid-column-end: 4;
     }
-  }
-
-  @media screen and (min-width: 140ch) {
-    grid-template-columns: minmax(20ch, 333px) 50ch 1fr;
   }
 }
 
@@ -144,6 +140,10 @@ h1 {
 
 label {
   font-size: 0.8em;
+
+  &.field {
+    margin-inline: 0;
+  }
 }
 
 fieldset {
@@ -160,7 +160,7 @@ fieldset {
 }
 
 input:where([type="text"], [type="email"]) {
-  border: 3px solid black;
+  border: var(--border-width) solid black;
   border-radius: var(--border-radius);
   font: inherit;
   padding: 0.5em 1em;
@@ -212,6 +212,7 @@ img {
 
 .monkey-img {
   max-height: 66lvh;
+  max-width: 333px;
 }
 
 .visually-hidden {
@@ -226,14 +227,10 @@ img {
 
 footer {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   font-size: 0.6em;
-
-  @media screen and (min-width: 80ch) {
-    flex-direction: row;
-  }
 
   svg {
     width: 80px;
@@ -241,8 +238,54 @@ footer {
   }
 }
 
+@media screen and (min-width: 80ch) {
+  footer {
+    flex-direction: row;
+    align-items: flex-end;
+  }
+
+  .author {
+    margin-left: auto;
+  }
+}
+
+.puh-the-bear {
+  display: none;
+}
+
+.checkbox {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+input[type="checkbox"] {
+  position: relative;
+  appearance: none;
+  border: var(--border-width) solid black;
+  width: 3em;
+  height: 3em;
+  border-radius: 6px;
+  background-color: white;
+
+  &:checked {
+    &::after{
+      content: '';
+      position: absolute;
+      inset: 0.25em;
+      background-color: currentColor;
+      background-repeat: no-repeat;
+      mask-image: url("data:image/svg+xml,%3Csvg  viewBox='0 0 33 33' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0 18.4737L10.6667 29L32 7.94737L28 4L10.6667 21.1053L4 14.5263L0 18.4737Z'/%3E%3C/svg%3E%0A");
+      forced-color-adjust: none;
+    }
+  }
+}
+
+[for="i-present"]:has(:not(#i-present:checked)) ~ .wants-to-present {
+  display: none;
+}
+
 .author {
-  margin-left: auto;
   display: flex;
   gap: 20px;
 }
