--- a/madness.css
+++ b/madness.css
@@ -54,73 +54,44 @@ h1 {
   margin-bottom: 0;
 }
 
-/* Yeah, kind of a hack. Have a better idea? Drop me a line! */
-.bordered-text {
-  margin-inline: 20px;
-  line-height: calc(1em + 20px);
-  text-shadow: #fff 20px 0px 0px, #fff 19.975px 0.999583px 0px,
-    #fff 19.9001px 1.99667px 0px, #fff 19.7754px 2.98876px 0px,
-    #fff 19.6013px 3.97339px 0px, #fff 19.3782px 4.94808px 0px,
-    #fff 19.1067px 5.9104px 0px, #fff 18.7875px 6.85796px 0px,
-    #fff 18.4212px 7.78837px 0px, #fff 18.0089px 8.69931px 0px,
-    #fff 17.5517px 9.58851px 0px, #fff 17.0505px 10.4537px 0px,
-    #fff 16.5067px 11.2928px 0px, #fff 15.9217px 12.1037px 0px,
-    #fff 15.2968px 12.8844px 0px, #fff 14.6338px 13.6328px 0px,
-    #fff 13.9341px 14.3471px 0px, #fff 13.1997px 15.0256px 0px,
-    #fff 12.4322px 15.6665px 0px, #fff 11.6337px 16.2683px 0px,
-    #fff 10.806px 16.8294px 0px, #fff 9.95142px 17.3485px 0px,
-    #fff 9.07192px 17.8241px 0px, #fff 8.16975px 18.2553px 0px,
-    #fff 7.24716px 18.6408px 0px, #fff 6.30645px 18.9797px 0px,
-    #fff 5.34998px 19.2712px 0px, #fff 4.38013px 19.5145px 0px,
-    #fff 3.39934px 19.709px 0px, #fff 2.41006px 19.8543px 0px,
-    #fff 1.41474px 19.9499px 0px, #fff 0.415897px 19.9957px 0px,
-    #fff -0.58399px 19.9915px 0px, #fff -1.58242px 19.9373px 0px,
-    #fff -2.57689px 19.8333px 0px, #fff -3.56492px 19.6797px 0px,
-    #fff -4.54404px 19.477px 0px, #fff -5.51181px 19.2255px 0px,
-    #fff -6.46579px 18.926px 0px, #fff -7.40362px 18.5792px 0px,
-    #fff -8.32294px 18.1859px 0px, #fff -9.22145px 17.7472px 0px,
-    #fff -10.0969px 17.2642px 0px, #fff -10.9472px 16.738px 0px,
-    #fff -11.77px 16.1699px 0px, #fff -12.5635px 15.5615px 0px,
-    #fff -13.3255px 14.9141px 0px, #fff -14.0543px 14.2295px 0px,
-    #fff -14.7479px 13.5093px 0px, #fff -15.4046px 12.7553px 0px,
-    #fff -16.0229px 11.9694px 0px, #fff -16.6011px 11.1537px 0px,
-    #fff -17.1378px 10.31px 0px, #fff -17.6316px 9.44061px 0px,
-    #fff -18.0814px 8.5476px 0px, #fff -18.486px 7.63322px 0px,
-    #fff -18.8444px 6.69976px 0px, #fff -19.1557px 5.74956px 0px,
-    #fff -19.4192px 4.78499px 0px, #fff -19.634px 3.80845px 0px,
-    #fff -19.7999px 2.8224px 0px, #fff -19.9162px 1.82929px 0px,
-    #fff -19.9827px 0.831613px 0px, #fff -19.9993px -0.168145px 0px,
-    #fff -19.9659px -1.16748px 0px, #fff -19.8826px -2.1639px 0px,
-    #fff -19.7496px -3.15491px 0px, #fff -19.5672px -4.13804px 0px,
-    #fff -19.336px -5.11082px 0px, #fff -19.0564px -6.07083px 0px,
-    #fff -18.7291px -7.01566px 0px, #fff -18.3551px -7.94296px 0px,
-    #fff -17.9352px -8.85041px 0px, #fff -17.4704px -9.73573px 0px,
-    #fff -16.962px -10.5967px 0px, #fff -16.4112px -11.4312px 0px,
-    #fff -15.8194px -12.2372px 0px, #fff -15.188px -13.0125px 0px,
-    #fff -14.5186px -13.7553px 0px, #fff -13.813px -14.4638px 0px,
-    #fff -13.0729px -15.1361px 0px, #fff -12.3px -15.7705px 0px,
-    #fff -11.4965px -16.3655px 0px, #fff -10.6642px -16.9197px 0px,
-    #fff -9.80522px -17.4315px 0px, #fff -8.92175px -17.8998px 0px,
-    #fff -8.01598px -18.3233px 0px, #fff -7.09018px -18.7011px 0px,
-    #fff -6.14666px -19.032px 0px, #fff -5.18777px -19.3155px 0px,
-    #fff -4.21592px -19.5506px 0px, #fff -3.23352px -19.7369px 0px,
-    #fff -2.24305px -19.8738px 0px, #fff -1.24697px -19.9611px 0px,
-    #fff -0.247773px -19.9985px 0px, #fff 0.752043px -19.9859px 0px,
-    #fff 1.74998px -19.9233px 0px, #fff 2.74354px -19.8109px 0px,
-    #fff 3.73025px -19.6491px 0px, #fff 4.70763px -19.4381px 0px,
-    #fff 5.67324px -19.1785px 0px, #fff 6.62468px -18.871px 0px,
-    #fff 7.55956px -18.5163px 0px, #fff 8.47554px -18.1153px 0px,
-    #fff 9.37033px -17.6691px 0px, #fff 10.2417px -17.1787px 0px,
-    #fff 11.0875px -16.6453px 0px, #fff 11.9056px -16.0704px 0px,
-    #fff 12.6939px -15.4553px 0px, #fff 13.4504px -14.8015px 0px,
-    #fff 14.1734px -14.1108px 0px, #fff 14.8609px -13.3848px 0px,
-    #fff 15.5113px -12.6253px 0px, #fff 16.1229px -11.8343px 0px,
-    #fff 16.6943px -11.0137px 0px, #fff 17.2238px -10.1656px 0px,
-    #fff 17.7104px -9.29204px 0px, #fff 18.1527px -8.39528px 0px,
-    #fff 18.5496px -7.47753px 0px, #fff 18.9001px -6.5411px 0px,
-    #fff 19.2034px -5.58831px 0px, #fff 19.4587px -4.62156px 0px,
-    #fff 19.6654px -3.64325px 0px, #fff 19.8229px -2.65584px 0px,
-    #fff 19.9308px -1.66179px 0px, #fff 19.989px -0.663584px 0px;
+summary {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  cursor: pointer;
+
+  > * {
+    display: inline-block;
+    margin-block: 0;
+  }
+}
+
+.cloud {
+  background-color: white;
+  border: 0.25rem solid black;
+  border-radius: 0.5rem;
+  padding: 1.5rem 2rem;
+
+  :first-child {
+    margin-block-start: 0;
+  }
+
+  :last-child {
+    margin-block-end: 0;
+  }
+
+  & + & {
+    margin-block-start: 3rem;
+  }
+
+  &.small {
+    border-width: 2px;
+    padding: 0.5rem 1rem;
+  }
+
+  &:target {
+    outline: 10px solid var(--monkey-blue);
+  }
 }
 
 .subtitle {
@@ -167,24 +138,28 @@ input:where([type="text"], [type="email"]) {
   width: 100%;
 }
 
-:is(input, button, a[href]):focus-visible {
+:is(input, button, a[href], summary):focus-visible {
   outline: calc(var(--border-width) * 1.5) solid var(--monkey-blue);
   outline-offset: var(--border-width);
   position: relative;
   z-index: 1;
 }
 
-button {
+button,
+.button {
   font: inherit;
   border: var(--border-width) solid black;
   padding: 0.5em 1em;
   background-color: var(--monkey-teal);
   border-radius: var(--border-radius);
+  color: inherit;
   cursor: pointer;
   font-size: 0.9em;
   text-wrap: nowrap;
+  text-decoration: none;
 
   &:hover {
+    color: inherit;
     filter: brightness(85%);
   }
 
@@ -225,12 +200,12 @@ img {
   width: 1px;
 }
 
-footer {
+body > footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 0.6em;
+  margin-block-start: 3rem;
 
   svg {
     width: 80px;
@@ -251,6 +226,24 @@ footer {
 
 .puh-the-bear {
   display: none;
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.finger {
+  font-size: 2em;
+  transition: transform ease-out 0.35s;
+
+  details[open] & {
+    transform: scaleY(-1);
+  }
 }
 
 .checkbox {
@@ -291,13 +284,20 @@ input[type="checkbox"] {
 }
 
 .agenda {
-  padding-left: 0;
+  margin-block-start: 1.5rem;
+  padding-left: 1.5rem;
+
+  li {
+    padding-left: 0.5rem;
+    margin-block: 1rem;
+  }
 }
 
 .agenda li::marker {
-  margin-left: 0;
-  position: relative;
-  z-index: 1;
+  content: attr(data-marker);
+  display: inline-block;
+  font-size: inherit;
+  margin-right: 1rem;
 }
 .agenda h3 {
   margin-top: 2em;
@@ -308,4 +308,40 @@ input[type="checkbox"] {
 .agenda .speaker {
   font-size: 0.9em;
   font-style: italic;
+}
+
+.pictures {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  figure {
+    margin: 0;
+    flex: 1 1 9rem;
+    position: relative;
+
+    a {
+      border: 3px solid black;
+      border-radius: 5px;
+      overflow: hidden;
+      display: block;
+    }
+
+    figcaption {
+      border: 3px solid black;
+      padding: 0.5rem;
+      font-size: 0.6em;
+      position: absolute;
+      inset: 0.5rem;
+      top: auto;
+      bottom: -1rem;
+      border-radius: 5px;
+      background: white;
+    }
+
+    img {
+      display: block;
+      aspect-ratio: 7/8;
+      object-fit: cover;
+    }
+  }
 }
