--- a/madness.css
+++ b/madness.css
@@ -351,6 +351,7 @@ input[type="checkbox"] {
       bottom: -1rem;
       border-radius: 5px;
       background: white;
+      z-index: 1;
     }
 
     img {
